--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,18 @@
 [submodule "FAST_LIO"]
 	path = FAST_LIO
 	url = https://github.com/hyyyyyyz/FAST_LIO.git
+[submodule "small_gicp_relocalization"]
+	path = small_gicp_relocalization
+	url = https://github.com/hyyyyyyz/small_gicp_relocalization.git
+[submodule "livox_ros_driver2"]
+	path = livox_ros_driver2
+	url = https://github.com/hyyyyyyz/livox_ros_driver2.git
+[submodule "point_lio"]
+	path = point_lio
+	url = https://github.com/hyyyyyyz/point_lio.git
+[submodule "pointcloud_to_laserscan"]
+	path = pointcloud_to_laserscan
+	url = https://github.com/hyyyyyyz/pointcloud_to_laserscan.git
+[submodule "pcd2pgm"]
+	path = pcd2pgm
+	url = https://github.com/hyyyyyyz/pcd2pgm.git
